[package]
name = "BlogPostEditor"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
eframe = "0.31.1"
egui = "0.31.1"
egui_commonmark = "0.20.0"
sqlx = { version = "0.8.5", features = [
    "postgres",
    "runtime-tokio-native-tls",
] }
tokio = { version = "1", features = ["full"] }
